fixed contact section alignment issues

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -611,7 +611,7 @@ main {
                 flex-direction: column;
                 gap: 20px;
                 grid-area: form;
-                margin: 30px 0;
+                margin: 30px;
                 padding: 30px;
 
                 h5 {
@@ -1098,6 +1098,15 @@ footer {
             &#section3 {
                 padding-left: 140px;
                 padding-right: 140px;
+            }
+
+            &#section7 {
+                grid-template-columns: repeat(2, calc(50% - 60px));
+
+                .map {
+                    justify-self: flex-start;
+                    max-width: 410px;
+                }
             }
         }
     }
